tests/NormalTests/paczka1/fuzzy1/29880091.err
Error in line 9: TCDSWYspn S502 -3,2
Error in line 12: TjCJJqdlqDC S859 9,38
Error in line 13: qNd9SRTR3Kf S328 81,5
Error in line 15: qNd9SRTR3Kf S859 68,2
Error in line 25: TCDSWYspn S502 11,4
